--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
                 <h2>Works</h2>
                 <div class="sub_works_content">
                     <div class="first_work">
-                        <img src="image/works1.png" alt="works1" height="150" width="250">
+                        <div class="bg_work">
+                            <img src="image/works1.png" alt="works1">
+                        </div>
                         <div class="first_work_content">
                             <p class="first_work_title">StarBucks</p>
                             <p class="second_work_title"><span>2026</span>Adaptive Layout</p>
@@ -96,7 +98,9 @@
                         </div>
                     </div>
                     <div class="second_work">
-                        <img src="image/works2.png" alt="works2" height="150" width="250">
+                        <div class="bg_work">
+                            <img src="image/works2.png" alt="works2">
+                        </div>
                         <div class="second_work_content">
                             <p class="first_work_title">Portfolio</p>
                             <p class="second_work_title"><span>2023</span>Adaptive Layout</p>
@@ -104,7 +108,9 @@
                         </div>
                     </div>
                     <div class="third_work">
-                        <img src="image/works3.png" alt="works3" height="150" width="250">
+                        <div class="bg_work">
+                            <img src="image/works3.png" alt="works3">
+                        </div>
                         <div class="third_work_content">
                             <p class="first_work_title">NFT Marketplace</p>
                             <p class="second_work_title"><span>2024</span>Adaptive Layout</p>
